# transformerlab-gpu-orchestration

./: .coveragerc  .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  demo.cast  docker-compose.yml  docker-run.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  run_tests.sh  setup.sh  start.sh
.github/workflows/: main_lattice-staging-002.yml  prettier.yml  pytest.yml  ruff.yml
backend/: .env.example  alembic.ini  config.py  db_models.py  main.py  models.py  pyproject.toml  requirements.txt  setup_cli.py  test_workos.py
backend/admin/: routes.py
backend/alembic/versions/: 20250808_ssh_node_pools.py  49f25e3e5c1d_add_api_keys_table.py  add_resources_column.py  d51fd3166e33_add_user_quotas_and_modify_quota_periods.py  d7aec86e988a_modify_organization_quotas_for_.py  f41ac9d5ce4f_add_quota_tracking_tables.py
backend/api-client/python/: README.md  pyproject.toml
backend/api-client/python/.openapi-generator/: FILES
backend/api-client/python/docs/: AddMemberRequest.md  AzureConfigRequest.md  BodyPollCliAuthorizationApiV1AuthCliPollPost.md  ClusterResponse.md  CreateAPIKeyResponse.md  CreateUserQuotaRequest.md  DefaultApi.md  DownClusterRequest.md  JobLogsResponse.md  JobRecord.md  Organization.md  OrganizationQuotaResponse.md  OrganizationResponse.md  OrganizationUserUsageResponse.md  ReportData.md  ReportsResponse.md  RunPodConfigRequest.md  SSHNode.md  SendInvitationRequest.md  StatusResponse.md  StopClusterRequest.md  StorageBucketListResponse.md  UpdateQuotaRequest.md  UpdateStorageBucketRequest.md  UserQuotaResponse.md
backend/api-client/python/openapi_client/: __init__.py  configuration.py  exceptions.py  rest.py
backend/api-client/python/openapi_client/api/: default_api.py
backend/api-client/python/openapi_client/models/: __init__.py  api_key_response.py  body_authorize_cli_api_v1_auth_cli_authorize_post.py  cluster_response.py  create_api_key_request.py  create_storage_bucket_request.py  create_user_quota_request.py  down_cluster_response.py  job_logs_response.py  job_record.py  organization.py  organizations_response.py  quota_usage_response.py  report_data.py  reports_response.py  run_pod_config_request.py  run_pod_test_request.py  send_invitation_request.py  status_response.py  storage_bucket_list_response.py  storage_bucket_response.py  update_storage_bucket_request.py  user_quota_list_response.py  user_usage_breakdown.py  validation_error.py  validation_error_loc_inner.py
backend/api-client/python/test/: test_add_member_request.py  test_azure_config_request.py  test_cluster_status_response.py  test_create_api_key_request.py  test_create_storage_bucket_request.py  test_gpu_usage_log_response.py  test_organization.py  test_organizations_response.py  test_quota_usage_response.py  test_run_pod_config_request.py  test_run_pod_test_request.py  test_send_invitation_request.py  test_ssh_node.py  test_stop_cluster_request.py  test_storage_bucket_list_response.py  test_update_member_role_request.py  test_update_storage_bucket_request.py  test_update_user_quota_request.py  test_user_quota_response.py
backend/api_keys/: routes.py
backend/auth/: __init__.py  api_key_auth.py  cli.py  routes.py  utils.py
backend/auth/provider/: auth_provider.py
backend/cli/: main.py
backend/cli/commands/: instances.py  login.py  node_pools.py
backend/cli/util/: auth.py  common.py
backend/clusters/: routes.py  utils.py
backend/node_pools/: routes.py
backend/quota/: routes.py  utils.py
backend/reports/: __init__.py  models.py  routes.py  utils.py
backend/skypilot/: azure_utils.py  port_forwarding.py  routes.py  runpod_utils.py  utils.py
backend/storage_buckets/: __init__.py  routes.py
backend/terminal/: routes.py
backend/utils/: file_utils.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.tsx  index.css  index.tsx  vite-env.d.ts
src/: __init__.py
src/lattice/: alembic.ini  config.py  db_models.py  main.py  models.py
src/lattice/cli/: README.md  main.py  pyproject.toml  setup.py
src/lattice/cli/commands/: __init__.py  instances.py  login.py  node_pools.py  ssh.py
src/lattice/cli/util/: __init__.py  api.py  auth.py  common.py  file_utils.py
tests/: conftest.py  test_app_basic.py  test_clouds_db_config.py  test_file_utils.py
tests/auth/: test_api_key_service.py  test_auth_utils.py
tests/instances/: test_instances_utils_misc.py
tests/jobs/: test_jobs_utils.py
tests/node_pools/: test_utils.py  test_utils_negatives.py
tests/quota/: test_quota_utils_parse.py
tests/services/: test_admin_service.py  test_admin_teams_service.py  test_api_keys_service.py  test_auth_service.py  test_quota_team_service.py
tests/ssh_config/: test_validation.py
(+380 files in other folders)
