[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "fastapi==0.115.7",
    "pydantic>=2.10.4",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "runpod>=1.6.0",
    "skypilot[kubernetes,runpod,azure]==0.10.1",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]==0.35.0",
    "werkzeug==3.1.3",
    "workos==5.24.0",
    # explicity add prerelease packages needed for azure-cli (uv broken currently)
    # see: https://docs.skypilot.co/en/latest/getting-started/installation.html#:~:text=%23%20Azure%20CLI%20has%20an%20issue%20with%20uv%2C%20and%20requires%20%27%2D%2Dprerelease%20allow%27.%0Auv%20pip%20install%20%2D%2Dprerelease%20allow%20azure%2Dcli
    "azure-batch==15.0.0b2",
    "azure-keyvault-administration==4.4.0b2",
    "azure-keyvault-keys==4.11.0b1",
    "azure-keyvault-securitydomain==1.0.0b1",
    "azure-mgmt-batchai==7.0.0b1",
    "azure-mgmt-containerinstance==10.2.0b1",
    "azure-mgmt-containerregistry==14.1.0b1",
    "azure-mgmt-datalake-store==1.1.0b1",
    "azure-mgmt-eventgrid==10.2.0b2",
    "azure-mgmt-extendedlocation==1.0.0b2",
    "azure-mgmt-hdinsight==9.0.0b3",
    "azure-mgmt-iotcentral==10.0.0b2",
    "azure-mgmt-loganalytics==13.0.0b4",
    "azure-mgmt-mysqlflexibleservers==1.0.0b3",
    "azure-mgmt-policyinsights==1.1.0b4",
    "azure-mgmt-postgresqlflexibleservers==1.1.0b2",
    "azure-mgmt-rdbms==10.2.0b17",
    "azure-mgmt-servicefabricmanagedclusters==2.1.0b1",
    "azure-mgmt-servicelinker==1.2.0b3",
    "azure-mgmt-signalr==2.0.0b2",
    "azure-mgmt-sql==4.0.0b21",
    "azure-mgmt-sqlvirtualmachine==1.0.0b5",
    "azure-mgmt-synapse==2.1.0b5",
    "msal==1.33.0b1",
    # end of explicit deps for azure-cli
    "azure-cli==2.75.0",
    "msrestazure==0.6.4.post1",
    "lab-client",
]

[project.scripts]
lattice = "lattice.main:main"
lab = "lattice.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
lab-client = { path = "src/lattice/lattice-client" }

[project.optional-dependencies]
dev = [
    "openapi-client>=1.1.7",
]

cli = [
    "typer",  # A popular choice for creating CLIs
    "rich",        # For beautiful formatting in the terminal
    # Add any other CLI-specific dependencies here
]
