[project]
name = "lattice-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "fastapi==0.115.7",
    "pydantic>=2.10.4",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "runpod>=1.6.0",
    "skypilot[kubernetes,runpod,azure]==0.10.0",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]==0.35.0",
    "workos==5.24.0",
    "azure-cli==2.75.0",
    "msrestazure==0.6.4.post1",
]

[tool.uv.pip]
prerelease = "allow"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "auth",
    "admin",
    "uploads",
    "alembic",
    "reports",
    "clusters",
    "skypilot",
    "utils",
]
