[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-lab-cli"
version = "0.1.0"
description = "Transformer Lab CLI Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "lab-client",
    "typer>=0.9.0",
]

[project.scripts]
lab = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.uv.sources]
lab-client = { path = "../lattice-client" }
